mongo-express.yml
#
# This file has both deployment and service defined together as they usually belong together
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express
  namespace: development
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 8081
---
#
# In minikube, to access this external service use - 
# minikube service mongo-express-service -n development
#
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: development
spec:
  selector:
    app: mongo-express
  type: LoadBalancer # creates an external service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000 # external service port number (range 30000 - 32767)
---
#
# In minikube, to enable addon ingress -
# minikube addons enable ingress
#
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-ingress-service
  namespace: development
spec:
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
